--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,7 +13,8 @@ const {
     <meta name="description" content={description} />
     <title>{title}</title>
 
-    <link rel="stylesheet" href="/styles/global.css" />
+    <link rel="stylesheet" href={`${import.meta.env.BASE_URL}global.css`} />
+    <link rel="icon" href={`${import.meta.env.BASE_URL}favicon.ico`} />
   </head>
 
   <body>
