--- a/src/pages/docs/folleto.astro
+++ b/src/pages/docs/folleto.astro
@@ -15,8 +15,8 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 
     <div class="actions noprint">
       <a class="btn primary" href="#" onclick="window.print(); return false;">Imprimir (A4)</a>
-      <a class="btn" href="/docs">Volver a Docs</a>
-      <a class="btn" href="/kaelum">Ver proyecto</a>
+      <a class="btn" href={`${import.meta.env.BASE_URL}docs/`}>Volver a Docs</a>
+      <a class="btn" href={`${import.meta.env.BASE_URL}kaelum/`}>Ver proyecto</a>
     </div>
   </section>
 
