No me digas que era esto

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,7 +17,7 @@ const is = (p: string) => rel === p || rel.startsWith(p + "/");
     <meta name="description" content={description} />
     <title>{title}</title>
 
-    <link rel="stylesheet" href={`${import.meta.env.BASE_URL}/styles/global.css`} />
+    <link rel="stylesheet" href={`${import.meta.env.BASE_URL}styles/global.css`} />
     <link rel="icon" href={`${import.meta.env.BASE_URL}favicon.ico`} />
   </head>
 
