--- a/src/pages/devlog/semana-1.astro
+++ b/src/pages/devlog/semana-1.astro
@@ -157,7 +157,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
       </p>
 
       <div class="actions">
-        <a class="btn primary" href={`${import.meta.env.BASE_URL}devlog/semana-2`}>Ir a Semana 2</a>
+        <a class="btn primary" href={`${import.meta.env.BASE_URL}devlog/semana-2/`}>Ir a Semana 2</a>
         <a class="btn" href={`${import.meta.env.BASE_URL}devlog/`}>Volver al índice</a>
       </div>
     </section>
